pkg/objects/CertificationRegister__c.object
<CustomObject>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Ano</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificacao_Pai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certificação Pai</label>
        <referenceTo>CertificationRegister__c</referenceTo>
        <relationshipLabel>Certificações Filhas</relationshipLabel>
        <relationshipName>Certificacoes_Filhas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_da_Release__c</fullName>
        <description>Campo que contém a data em que uma release saiu. Utilizado para ver se as certificações obtidas estão atrasadas ou não.</description>
        <label>Data da Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emissor__c</fullName>
        <label>Emissor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>PeerCert Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequencia_da_Manutencao__c</fullName>
        <label>Frequência da Manutenção</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensal</fullName>
                </value>
                <value>
                    <fullName>Bimestral</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Quadrimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Certificacao__c</fullName>
        <externalId>true</externalId>
        <label>ID Certificação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_da_Certificacao__c</fullName>
        <externalId>true</externalId>
        <label>Nome da Certificação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>TEXT(Versao__c) &amp; &quot; &quot; &amp;  TEXT(Ano__c)</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versao__c</fullName>
        <label>Versão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Certificação</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ano__c</columns>
        <columns>Data_da_Release__c</columns>
        <columns>Frequencia_da_Manutencao__c</columns>
        <columns>Versao__c</columns>
        <columns>Emissor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nome da Certificação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>